Import existing dotfiles.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,18 @@
 ---
-# defaults file for nix-dot
+dotfiles_user_home: "{{ ansible_env.HOME }}"
+code_checkout_path: "{{ dotfiles_user_home }}/Code"
+nix_path: "{{ lookup('env', 'HOME') }}/.nix-profile"
+nix_bin: "{{ nix_path }}/bin"
+xdg_share_dir: "{{ dotfiles_user_home }}/.local/share"
+xdg_config_dir: "{{ dotfiles_user_home }}/.config"
+zsh_username: "{{ lookup('env', 'USER') }}"
+git_name: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_NAME') }}"
+git_email: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_EMAIL') }}"
+xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
+xdg_config_dir_navi_cheats: "{{ xdg_config_dir_navi }}/cheats"
+nvim_share_dir: "{{ xdg_share_dir }}/nvim"
+nvim_vim_plug_dir: "{{ nvim_share_dir }}/site/autoload"
+nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
+nvim_config_dir: "{{ xdg_config_dir }}/nvim"
+nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
+nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
