--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,3 +19,5 @@ nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
 nvim_config_dir: "{{ xdg_config_dir }}/nvim"
 nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
 nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
+ranger_config: "{{ xdg_config_dir }}/ranger"
+ranger_plugins: "{{ ranger_config }}/plugins"
