Expose neovim shell to overwrite in playbook, template fzf-floaterm.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ nix_share: "{{ nix_path }}/share"
 nix_buildenv_name: dev-pack
 nix_config: "{{ xdg_config_dir }}/nixpkgs/config.nix"
 zsh_username: "{{ lookup('env', 'USER') }}"
+zsh_plugins: "{{ dotfiles_user_home }}/.zsh"
+zsh_fzf_tab: "{{ zsh_plugins }}/fzf-tab"
 git_name: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_NAME') }}"
 git_email: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_EMAIL') }}"
 xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
@@ -20,5 +22,6 @@ nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
 nvim_config_dir: "{{ xdg_config_dir }}/nvim"
 nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
 nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
+nvim_shell: "{{ nix_bin }}/zsh"
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
