--- a/install_ranger_zoxide.yml
+++ b/install_ranger_zoxide.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ranger | Setup Ranger Config Directory | template
+- name: Ranger | Setup Ranger Config Directory | directory
   file:
     path: "{{ ranger_config }}"
     state: directory
@@ -10,13 +10,13 @@
     src: ranger/rc.conf.j2
     dest: "{{ ranger_config }}/rc.conf"
 
-- name: Ranger | Setup Ranger Plugins Directory | template
+- name: Ranger | Setup Ranger Plugins Directory | directory
   file:
     path: "{{ ranger_plugins }}"
     state: directory
     mode: '0755'
 
-- name: Ranger | Install Ranger-Zoxide Plugin | template
+- name: Ranger | Install Ranger-Zoxide Plugin | git
   git:
     repo: 'https://github.com/jchook/ranger-zoxide.git'
     dest: "{{ ranger_plugins }}/ranger-zoxide"
