--- a/install_neovim.yml
+++ b/install_neovim.yml
@@ -41,7 +41,7 @@
 
 - name: Install Neovim Plugin Configs
   template:
-    src: 'nvim/nvim-config/{{ item.src }}'
+    src: '{{ item.src }}'
     dest: "{{ nvim_plugin_config_dir }}/{{ item.path  | regex_replace('\\.j2$', '') }}"
-  with_filetree: '../templates'
+  with_filetree: '../templates/nvim/nvim-config'
   when: item.state == 'file'
