--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,7 @@ nvim_share_dir: "{{ xdg_share_dir }}/nvim"
 nvim_vim_plug_dir: "{{ nvim_share_dir }}/site/autoload"
 nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
 nvim_config_dir: "{{ xdg_config_dir }}/nvim"
+nvim_init: "{{ nvim_config_dir }}/init.vim"
 nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
 nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_shell: "{{ nix_bin }}/zsh"
