Add broot config and neovim integration.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,3 +26,5 @@ nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_shell: "{{ nix_bin }}/zsh"
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
+broot_config: "{{ xdg_config_dir }}/broot"
+broot_config_file: "{{ broot_config }}/conf.hjson"
