--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,8 @@ nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_shell: "{{ nix_bin }}/zsh"
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
+lazygit_config: "{{ xdg_config_dir }}/lazygit"
+lazygit_config_file: "{{ lazygit_config }}/config.yml"
 broot_config: "{{ xdg_config_dir }}/broot"
 broot_config_file: "{{ broot_config }}/conf.hjson"
 cdg_paths_global: /etc/cdg_paths
