--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,9 @@
 - name: Install Ranger-Zoxide Plugin
   import_tasks: install_ranger_zoxide.yml
 
+- name: Install Lazygit
+  import_tasks: install_lazygit.yml
+
 - name: Install Broot
   import_tasks: install_broot.yml
 
