Add empty defaults for language-specific plugins.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,6 +24,8 @@ nvim_init: "{{ nvim_config_dir }}/init.vim"
 nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
 nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_shell: "{{ nix_bin }}/zsh"
+lsp_provider_neovim_plugins: ""
+language_neovim_plugins: ""
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
 lazygit_config: "{{ xdg_config_dir }}/lazygit"
