More plugin configs.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,10 @@ nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_shell: "{{ nix_bin }}/zsh"
 lsp_provider_neovim_plugins: ""
 language_neovim_plugins: ""
+lsp_provider_coc_settings: ""
+ale_plugin_settings: ""
+neoformat_plugin_settings: ""
+extra_plugin_settings: ""
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
 lazygit_config: "{{ xdg_config_dir }}/lazygit"
