--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,12 +4,12 @@ code_checkout_path: "{{ dotfiles_user_home }}/Code"
 bin_directory: "{{ dotfiles_user_home }}/.local/bin"
 xdg_share_dir: "{{ dotfiles_user_home }}/.local/share"
 xdg_config_dir: "{{ dotfiles_user_home }}/.config"
-nix_path: "{{ lookup('env', 'HOME') }}/.nix-profile"
+nix_path: "{{ ansible_env.HOME }}/.nix-profile"
 nix_bin: "{{ nix_path }}/bin"
 nix_share: "{{ nix_path }}/share"
 nix_buildenv_name: dev-pack
 nix_config: "{{ xdg_config_dir }}/nixpkgs/config.nix"
-zsh_username: "{{ lookup('env', 'USER') }}"
+zsh_username: "{{ ansible_env.USER }}"
 zsh_plugins: "{{ dotfiles_user_home }}/.zsh"
 zsh_fzf_tab: "{{ zsh_plugins }}/fzf-tab"
 git_name: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_NAME') }}"
