Add missing variable.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -30,6 +30,7 @@ language_neovim_plugins: ""
 lsp_provider_coc_settings: ""
 ale_plugin_settings: ""
 neoformat_plugin_settings: ""
+dap_plugin_settings: ""
 extra_plugin_settings: ""
 ranger_config: "{{ xdg_config_dir }}/ranger"
 ranger_plugins: "{{ ranger_config }}/plugins"
