--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,6 +23,8 @@ nvim_vim_plug_dir: "{{ nvim_share_dir }}/site/autoload"
 nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
 nvim_config_dir: "{{ xdg_config_dir }}/nvim"
 nvim_init: "{{ nvim_config_dir }}/init.vim"
+nvim_lua_config_dir: "{{ nvim_config_dir }}/lua"
+nvim_config_lua: "{{ nvim_lua_config_dir }}/config.lua"
 nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
 nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_shell: "{{ nix_bin }}/zsh"
@@ -32,12 +34,14 @@ ale_plugin_settings: []
 neoformat_plugin_settings: []
 dap_plugin_settings: []
 extra_plugin_settings: []
+extra_lua_plugin_settings: []
 lsp_provider_neovim_plugins_file: "{{ lsp_provider_neovim_plugins | join('\n') }}"
 language_neovim_plugins_file: "{{ language_neovim_plugins | join('\n') }}"
 ale_plugin_settings_file: "{{ ale_plugin_settings | join('\n') }}"
 neoformat_plugin_settings_file: "{{ neoformat_plugin_settings | join('\n') }}"
 dap_plugin_settings_file: "{{ dap_plugin_settings | join('\n') }}"
 extra_plugin_settings_file: "{{ extra_plugin_settings | join('\n') }}"
+extra_lua_plugin_settings_file: "{{ extra_lua_plugin_settings | join('\n') }}"
 lsp_provider_coc_settings: {}
 lsp_provider_coc_settings_base:
   diagnostic.displayByAle: true
