--- a/install_neovim.yml
+++ b/install_neovim.yml
@@ -5,14 +5,23 @@
     state: directory
     mode: '0755'
 
+- name: Setup Neovim Lua Config Directory
+  file:
+    path: "{{ nvim_lua_config_dir }}"
+    state: directory
+    mode: '0755'
+
 - name: Neovim | Copies Neovim Config | template
-  changed_when: false
+  template:
+    src: nvim/config.lua.j2
+    dest: "{{ nvim_config_lua }}"
+
+- name: Neovim | Copies Neovim Config | template
   template:
     src: nvim/init.vim.j2
     dest: "{{ nvim_init }}"
 
 - name: Install Neovim COC Plugin Settings
-  changed_when: false
   template:
     src: nvim/coc-settings.json.j2
     dest: "{{ nvim_coc_settings_file }}"
