--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,7 @@ nix_config: "{{ xdg_config_dir }}/nixpkgs/config.nix"
 zsh_username: "{{ ansible_env.USER }}"
 zsh_plugins: "{{ dotfiles_user_home }}/.zsh"
 zsh_fzf_tab: "{{ zsh_plugins }}/fzf-tab"
+zsh_git_fuzzy: "{{ zsh_plugins }}/git-fuzzy"
 extra_zsh_aliases: []
 extra_zsh_aliases_file: "{{ extra_zsh_aliases | join('\n') }}"
 git_name: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_NAME') }}"
