--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,8 @@ zsh_username: "{{ ansible_env.USER }}"
 zsh_plugins: "{{ dotfiles_user_home }}/.zsh"
 zsh_fzf_tab: "{{ zsh_plugins }}/fzf-tab"
 zsh_git_fuzzy: "{{ zsh_plugins }}/git-fuzzy"
+zsh_git_fuzzy_upstream: origin
+zsh_git_fuzzy_branch: main
 extra_zsh_aliases: []
 extra_zsh_aliases_file: "{{ extra_zsh_aliases | join('\n') }}"
 git_name: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_NAME') }}"
