--- a/install_git.yml
+++ b/install_git.yml
@@ -3,3 +3,8 @@
   template:
     src: git/gitconfig.j2
     dest: "{{ dotfiles_user_home }}/.gitconfig"
+
+- name: Git | Copies git ignore(global) | template
+  template:
+    src: git/gitignore.j2
+    dest: "{{ dotfiles_user_home }}/.gitignore"
