--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,6 +34,7 @@ nvim_plugin_config_dir: "{{ nvim_config_dir }}/nvim-config"
 nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_filetype_dir: "{{ nvim_config_dir }}/ftdetect"
 nvim_syntax_dir: "{{ nvim_config_dir }}/syntax"
+nvim_filetype_settings_dir: "{{ nvim_config_dir }}/ftplugin"
 nvim_shell: "{{ nix_bin }}/zsh"
 nvim_custom_filetypes: {}
 lsp_provider_neovim_plugins: []
