Add gitlab checkout path variable.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,6 +21,7 @@ git_email: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_EMAIL') }}"
 github_username: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GITHUB_USERNAME') }}"
 code_checkout_path: "{{ dotfiles_user_home }}/Code"
 code_checkout_path_github: "{{ code_checkout_path }}/github.com/{{ github_username }}"
+code_checkout_path_gitlab: "{{ code_checkout_path }}/gitlab.com/{{ github_username }}"
 xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
 xdg_config_dir_navi_cheats: "{{ xdg_config_dir_navi }}/cheats"
 nvim_share_dir: "{{ xdg_share_dir }}/nvim"
