Add Zellij config.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -80,3 +80,5 @@ tmux_config_file: "{{ tmux_config_dir }}/tmux.conf"
 tmux_plugin_dir: "{{ dotfiles_user_home }}/.tmux/plugins"
 tmux_tpm_dir: "{{ tmux_plugin_dir }}/tpm"
 tmux_tpm_url: https://github.com/tmux-plugins/tpm
+zellij_config_dir: "{{ xdg_config_dir }}/zellij"
+zellij_config_file: "{{ zellij_config_dir }}/config.yaml"
