--- a/install_tmux.yml
+++ b/install_tmux.yml
@@ -14,3 +14,8 @@
   git:
     repo: "{{ tmux_tpm_url }}"
     dest: "{{ tmux_tpm_dir }}"
+
+- name: Tmux | Copies Tmux Keybindings | template
+  template:
+    src: tmux/keybindings.conf.j2
+    dest: "{{ tmux_keybindings_file }}"
