[Neovim] Switch to full lua config.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,7 @@ nvim_share_dir: "{{ xdg_share_dir }}/nvim"
 nvim_vim_plug_dir: "{{ nvim_share_dir }}/site/autoload"
 nvim_plugged_dir: "{{ nvim_share_dir }}/plugged"
 nvim_config_dir: "{{ xdg_config_dir }}/nvim"
+nvim_init_lua: "{{ nvim_config_dir }}/init.lua"
 nvim_init: "{{ nvim_config_dir }}/init.vim"
 nvim_lua_config_dir: "{{ nvim_config_dir }}/lua"
 nvim_config_lua: "{{ nvim_lua_config_dir }}/config.lua"
