[Neovim] Fix nix shell command.

--- a/install_neovim.yml
+++ b/install_neovim.yml
@@ -7,7 +7,7 @@
 
 - name: Install Neovim Plugins(Packer)
   changed_when: false
-  command: "{{ nix_bin }}/nix-shell -p gcc --command {{ nix_bin }}/nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'"
+  shell: "{{ nix_bin }}/nix-shell -p gcc && {{ nix_bin }}/nvim --headless -c 'autocmd User PackerComplete quitall' -c 'PackerSync'"
 
       #- name: Setup Neovim Lua Config Directory
       #  file:
