--- a/tasks/install_neovim.yml
+++ b/tasks/install_neovim.yml
@@ -21,10 +21,12 @@
     state: directory
     mode: '0755'
 
-- name: Neovim | Copies Neovim Statusline Config | template
+- name: Neovim | Copies Neovim Plugin Config | template
   template:
-    src: nvim/lua/slanted-gaps.lua.j2
-    dest: "{{ nvim_lua_config_dir }}/slanted-gaps.lua"
+    src: '{{ item.src }}'
+    dest: "{{ nvim_lua_config_dir }}/{{ item.path  | regex_replace('\\.j2$', '') }}"
+  with_filetree: '../templates/nvim/lua'
+  when: item.state == 'file'
 
       #- name: Setup Neovim Lua Config Directory
       #  file:
