[Neovim] Add lsp language servers.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,6 +47,8 @@ dap_plugin_settings: []
 extra_plugin_settings: []
 extra_lua_plugin_settings: []
 extra_bookmarks: []
+lsp_providers: []
+lsp_provider_lspconfig_file: "{{ lsp_providers | join('\n') }}"
 lsp_provider_neovim_plugins_file: "{{ lsp_provider_neovim_plugins | join('\n') }}"
 language_neovim_plugins_file: "{{ language_neovim_plugins | join('\n') }}"
 ale_plugin_settings_file: "{{ ale_plugin_settings | join('\n') }}"
