--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,6 +37,7 @@ nvim_coc_settings_file: "{{ nvim_config_dir }}/coc-settings.json"
 nvim_filetype_dir: "{{ nvim_config_dir }}/ftdetect"
 nvim_syntax_dir: "{{ nvim_config_dir }}/syntax"
 nvim_filetype_settings_dir: "{{ nvim_config_dir }}/ftplugin"
+nvim_projects_dir: "{{ xdg_config_dir }}/projects-config"
 nvim_shell: "{{ nix_bin }}/zsh"
 nvim_custom_filetypes: {}
 lsp_provider_neovim_plugins: []
