--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 dotfiles_user_home: "{{ ansible_env.HOME }}"
+dotfiles_checkout_dir: "{{ code_checkout_path }}/role.nix-dot"
 bin_directory: "{{ dotfiles_user_home }}/.local/bin"
 xdg_share_dir: "{{ dotfiles_user_home }}/.local/share"
 xdg_config_dir: "{{ dotfiles_user_home }}/.config"
