[Zsh,Just] Fix completion.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,8 @@ nix_buildenv_name: dev-pack
 nix_config: "{{ xdg_config_dir }}/nixpkgs/config.nix"
 zsh_username: "{{ ansible_env.USER }}"
 zsh_plugins: "{{ dotfiles_user_home }}/.zsh"
+zsh_completions: "{{ zsh_plugins }}/completion"
+zsh_completion_just: "{{ zsh_completions }}/_just"
 zsh_fzf_tab: "{{ zsh_plugins }}/fzf-tab"
 zsh_git_fuzzy: "{{ zsh_plugins }}/git-fuzzy"
 zsh_git_fuzzy_upstream: origin
