--- a/tasks/install_zsh.yml
+++ b/tasks/install_zsh.yml
@@ -4,9 +4,15 @@
     src: zsh/zshrc.j2
     dest: "{{ dotfiles_user_home }}/.zshrc"
 
-- name: Zsh | Setup Zsh Plugins Directory | directory
+- name: Zsh | Setup Zsh Plugins Directory | file
   file:
     path: "{{ zsh_plugins }}"
+    state: directory
+    mode: '0755'
+
+- name: Zsh | Setup Zsh Completions Directory | file
+  file:
+    path: "{{ zsh_completions }}"
     state: directory
     mode: '0755'
 
