[Zellij] Update work layout.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -29,6 +29,7 @@ github_username: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GITHUB_USERNAME') }}"
 code_checkout_path: "{{ dotfiles_user_home }}/Code"
 code_checkout_path_github: "{{ code_checkout_path }}/github.com/{{ github_username }}"
 code_checkout_path_gitlab: "{{ code_checkout_path }}/gitlab.com/{{ github_username }}"
+homelab_dir: "{{ code_checkout_path_github }}/homelab"
 dotfiles_checkout_dir: "{{ code_checkout_path_github }}/role.nix-dot"
 xdg_config_dir_navi: "{{ xdg_share_dir }}/navi"
 xdg_config_dir_navi_cheats: "{{ xdg_config_dir_navi }}/cheats"
