--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,7 @@ bash_git_fuzzy: "{{ bash_plugins }}/git-fuzzy"
 git_name: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_NAME') }}"
 git_email: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GIT_EMAIL') }}"
 github_username: "{{ lookup('env', 'DOTFILES_BOOTSTRAP_GITHUB_USERNAME') }}"
+git_ssh: /usr/bin/ssh
 code_checkout_path: "{{ dotfiles_user_home }}/Code"
 code_checkout_path_github: "{{ code_checkout_path }}/github.com/{{ github_username }}"
 code_checkout_path_gitlab: "{{ code_checkout_path }}/gitlab.com/{{ github_username }}"
