--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -133,12 +133,12 @@ zellij_work_layout:
     - direction: Vertical
       name: "{{ zellij_work_layout_session_name }}"
       run:
-        command: {cmd: {{ nvim_shell }}, args: ["-c", "cd {{ homelab_dir }} && exec {{ nvim_shell_cmd }}"]}
+        command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ homelab_dir }} && exec {{ nvim_shell_cmd }}"]}
     - direction: Vertical
       name: "Dotfiles"
       run:
-        command: {cmd: {{ nvim_shell }}, args: ["-c", "cd {{ dotfiles_checkout_dir }} && exec {{ nvim_shell_cmd }}"]}
+        command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ dotfiles_checkout_dir }} && exec {{ nvim_shell_cmd }}"]}
     - direction: Vertical
       name: "Code"
       run:
-        command: {cmd: {{ nvim_shell }}, args: ["-c", "cd {{ code_home_dir }} && exec {{ nvim_shell_cmd }}"]}
+        command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ code_home_dir }} && exec {{ nvim_shell_cmd }}"]}
