--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -106,39 +106,46 @@ tmux_keybindings_file: "{{ tmux_config_dir }}/keybindings.conf"
 zellij_config_dir: "{{ xdg_config_dir }}/zellij"
 zellij_config_file: "{{ zellij_config_dir }}/config.yaml"
 zellij_layout_dir: "{{ zellij_config_dir }}/layouts"
-zellij_work_layout_session_name: "HomeLab"
-zellij_work_layout:
-  session:
-    name: "{{ zellij_work_layout_session_name }}"
-  template:
-    direction: Horizontal
-    parts:
-      - direction: Vertical
-        borderless: true
-        split_size:
-          Fixed: 1
-        run:
-          plugin:
-            location: "zellij:tab-bar"
-      - direction: Vertical
-        body: true
-      - direction: Vertical
-        borderless: true
-        split_size:
-          Fixed: 2
-        run:
-          plugin:
-            location: "zellij:status-bar"
-  tabs:
-    - direction: Vertical
-      name: "{{ zellij_work_layout_session_name }}"
-      run:
-        command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ homelab_dir }} && exec {{ nvim_shell_cmd }}"]}
-    - direction: Vertical
-      name: "Dotfiles"
-      run:
-        command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ dotfiles_checkout_dir }} && exec {{ nvim_shell_cmd }}"]}
-    - direction: Vertical
-      name: "Code"
-      run:
-        command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ code_home_dir }} && exec {{ nvim_shell_cmd }}"]}
+zellij_layouts:
+  example:                                                                                                                                -
+    name: example
+    zellij_session:
+      session:
+        name: "Example Project"
+    zellij_template:
+      template:
+        direction: Horizontal
+        parts:
+          - direction: Vertical
+            borderless: true
+            split_size:
+              Fixed: 1
+            run:
+              plugin:
+                location: "zellij:tab-bar"
+          - direction: Vertical
+            body: true
+          - direction: Vertical
+            borderless: true
+            split_size:
+              Fixed: 2
+            run:
+              plugin:
+                location: "zellij:status-bar"
+    zellij_tabs:
+      tabs:
+        - direction: Vertical
+          name: "Homelab"
+          run:
+            command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ homelab_dir }} && exec {{ nvim_shell_cmd }}"]}
+        - direction: Vertical
+          name: "Dotfiles"
+          run:
+            command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ dotfiles_checkout_dir }} && exec {{ nvim_shell_cmd }}"]}
+        - direction: Vertical
+          name: "Code"
+          run:
+            command: {cmd: "{{ nvim_shell }}", args: ["-c", "cd {{ code_home_dir }} && exec {{ nvim_shell_cmd }}"]}
+zellij_session_info: "{{ zellij_layouts.example.zellij_session }}"
+zellij_template_info: "{{ zellij_layouts.example.zellij_template }}"
+zellij_tab_info: "{{ zellij_layouts.example.zellij_tabs }}"
