[Zellij] Fix copy/paste formatting.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -107,7 +107,7 @@ zellij_config_dir: "{{ xdg_config_dir }}/zellij"
 zellij_config_file: "{{ zellij_config_dir }}/config.yaml"
 zellij_layout_dir: "{{ zellij_config_dir }}/layouts"
 zellij_layouts:
-  example:                                                                                                                                -
+  example:
     name: example
     zellij_session:
       session:
